--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
             <h1>Actividad 3.1 - Línea de Tiempo</h1>
             <p class="subtitle">Evolución Histórica de la Ingeniería en Sistemas Computacionales</p>
             <div class="student-info">
-                <p><strong>Estudiante:</strong> [Tu Nombre Completo]</p>
-                <p><strong>Matrícula:</strong> [Tu Matrícula]</p>
+                <p><strong>Estudiante:</strong> DAVID VIDAL RAMIREZ</p>
+                <p><strong>Correo electrónico:</strong> L25350801@tuxtepec.tecnm.mx</p>
                 <p><strong>Fecha:</strong> [Fecha de Entrega]</p>
                 <p><strong>Asignatura:</strong> Fundamentos de Investigación</p>
             </div>
